security removed